Fixing CSS to wrap around code blocks (fixes #1)

--- a/themes/skeleton/static/css/main.css
+++ b/themes/skeleton/static/css/main.css
@@ -27,20 +27,20 @@ input[type="email"] {
   height: 24px;
 }
 
-.button.button-primary, 
-button.button-primary, 
-input[type="submit"].button-primary, 
-input[type="reset"].button-primary, 
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
 input[type="button"].button-primary {
   border-color: rgb(105, 128, 140);
   background: rgb(105, 128, 140);
 }
 
-.button.button-primary:hover, 
-button.button-primary:hover, 
+.button.button-primary:hover,
+button.button-primary:hover,
 input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover, 
-input[type="button"].button-primary:hover, 
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
 .button.button-primary:focus,
 button.button-primary:focus,
 input[type="submit"].button-primary:focus,
@@ -109,7 +109,7 @@ blockquote {
   margin: 2rem 0;
 }
 
-h1 { 
+h1 {
   font-size: 1.8rem;
 }
 
@@ -253,7 +253,7 @@ div.post-meta, .paging {
 }
 
 /* QUOTE PAGE */
-div.custom-quote, 
+div.custom-quote,
 ul#quotes-list li {
   font-family: "Raleway", sans-serif;
   position: relative;
@@ -262,7 +262,7 @@ ul#quotes-list li {
   list-style-type: none;
 }
 
-div.custom-quote h1, 
+div.custom-quote h1,
 ul#quotes-list li h1 {
   font-size: 3rem;
   position: absolute;
@@ -275,7 +275,7 @@ ul#quotes-list li p {
   display: inline;
 }
 
-div.custom-quote span.author, 
+div.custom-quote span.author,
 ul#quotes-list li span.author {
   font-style: italic;
   font-weight: 600;
@@ -364,9 +364,9 @@ div#disqus_area {
 
 /* pygments highlighting */
 .highlight {
-  padding: 10px;
+/*  padding: 10px;
   border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;*/
 }
 
 code {
@@ -374,9 +374,14 @@ code {
   border: 1px solid #ddd;
 }
 
-.highlight pre {
+pre, .highlight pre {
   line-height: 135%;
-  margin: 0;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  /*margin: 0;*/
 }
 /* MEDIA QUERIES */
 
@@ -384,7 +389,7 @@ code {
 @media (min-width: 550px) {
   body { font-size: 1.8rem; }
 
-  h1 { font-size: 1.8rem; 
+  h1 { font-size: 1.8rem;
     margin-bottom: 0.4rem;
   }
   h2 { font-size: 2.0rem; }
