--- a/themes/skeleton/static/styles.css
+++ b/themes/skeleton/static/styles.css
@@ -504,7 +504,7 @@ th {
 
 
 /* Table of contents
-–––––––––––––––––––––––––––––––––––––––––––––––––– 
+––––––––––––––––––––––––––––––––––––––––––––––––––
 - Grid
 - Base Styles
 - Typography
@@ -524,29 +524,29 @@ th {
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
-  position: relative; 
-  width: 80%; 
-  max-width: 960px; 
-  margin: 0 auto; 
+  position: relative;
+  width: 80%;
+  max-width: 960px;
+  margin: 0 auto;
   padding: 0; }
-.container .column,        
-.container .columns { 
-  float: left; 
-  width: 100%; 
+.container .column,
+.container .columns {
+  float: left;
+  width: 100%;
   box-sizing: border-box; }
-.row { 
+.row {
   margin-bottom: 2rem; }
-.row .column:first-child,        
-.row .columns:first-child { 
+.row .column:first-child,
+.row .columns:first-child {
   margin-left: 0; }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-  
+
   .container .column,
   .container .columns {
     margin-left: 4%; }
-  
+
   .container .one.column,
   .container .one.columns          { width: 4.66666666667%; }
   .container .two.columns          { width: 13.3333333333%; }
@@ -591,10 +591,10 @@ th {
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
-html is set to 62.5% so that all the REM measurements throughout Skeleton 
+html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
-html { 
-  font-size: 62.5%; } 
+html {
+  font-size: 62.5%; }
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
@@ -605,7 +605,7 @@ body {
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 { 
+h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
   margin-top: 0;
   margin-bottom: 2rem; }
@@ -632,13 +632,13 @@ p {
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-a { 
+a {
   color: #1EAEDB; }
-a:hover { 
+a:hover {
   color: #0FA0CE; }
 
 
-/* Buttons 
+/* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .button,
 button,
@@ -659,7 +659,7 @@ input[type="button"] {
   line-height: 38px;
   padding: 0 25px;
   letter-spacing: .1rem;
-  text-transform: uppercase; 
+  text-transform: uppercase;
   white-space: nowrap;
   box-sizing: border-box; }
 .button:hover,
@@ -752,18 +752,18 @@ label > .label-body {
 
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-ul { 
+ul {
   list-style: circle inside; }
-ol { 
+ol {
   list-style: decimal inside; }
 ol, ul {
   margin-top: 0;
   padding-left: 0; }
-ul ul, 
+ul ul,
 ul ol,
-ol ol, 
-ol ul { 
-  margin: 1.5rem 0 1.5rem 3rem; 
+ol ol,
+ol ul {
+  margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
 li {
   margin-bottom: 1rem; }
@@ -855,7 +855,7 @@ hr {
 /* Self Clearing Goodness */
 .container:after,
 .row:after,
-.u-cf { 
+.u-cf {
   content: "";
   display: table;
   clear: both; }
@@ -864,10 +864,10 @@ hr {
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /*
-Note: The best way to structure the use of media queries is to create the queries 
+Note: The best way to structure the use of media queries is to create the queries
 near the relevant code. For example, if you wanted to change the styles for buttons
-on small devices, paste the mobile query code up in the buttons secion and style it 
-there. 
+on small devices, paste the mobile query code up in the buttons secion and style it
+there.
 */
 
 
@@ -915,20 +915,20 @@ input[type="email"] {
   height: 24px;
 }
 
-.button.button-primary, 
-button.button-primary, 
-input[type="submit"].button-primary, 
-input[type="reset"].button-primary, 
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
 input[type="button"].button-primary {
   border-color: rgb(105, 128, 140);
   background: rgb(105, 128, 140);
 }
 
-.button.button-primary:hover, 
-button.button-primary:hover, 
+.button.button-primary:hover,
+button.button-primary:hover,
 input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover, 
-input[type="button"].button-primary:hover, 
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
 .button.button-primary:focus,
 button.button-primary:focus,
 input[type="submit"].button-primary:focus,
@@ -997,7 +997,7 @@ blockquote {
   margin: 2rem 0;
 }
 
-h1 { 
+h1 {
   font-size: 1.8rem;
 }
 
@@ -1141,7 +1141,7 @@ div.post-meta, .paging {
 }
 
 /* QUOTE PAGE */
-div.custom-quote, 
+div.custom-quote,
 ul#quotes-list li {
   font-family: "Raleway", sans-serif;
   position: relative;
@@ -1150,7 +1150,7 @@ ul#quotes-list li {
   list-style-type: none;
 }
 
-div.custom-quote h1, 
+div.custom-quote h1,
 ul#quotes-list li h1 {
   font-size: 3rem;
   position: absolute;
@@ -1163,7 +1163,7 @@ ul#quotes-list li p {
   display: inline;
 }
 
-div.custom-quote span.author, 
+div.custom-quote span.author,
 ul#quotes-list li span.author {
   font-style: italic;
   font-weight: 600;
@@ -1252,9 +1252,9 @@ div#disqus_area {
 
 /* pygments highlighting */
 .highlight {
-  padding: 10px;
+/*  padding: 10px;
   border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;*/
 }
 
 code {
@@ -1262,9 +1262,14 @@ code {
   border: 1px solid #ddd;
 }
 
-.highlight pre {
+pre, .highlight pre {
   line-height: 135%;
-  margin: 0;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  /*margin: 0;*/
 }
 /* MEDIA QUERIES */
 
@@ -1272,7 +1277,7 @@ code {
 @media (min-width: 550px) {
   body { font-size: 1.8rem; }
 
-  h1 { font-size: 1.8rem; 
+  h1 { font-size: 1.8rem;
     margin-bottom: 0.4rem;
   }
   h2 { font-size: 2.0rem; }
